--- a/login/login.html
+++ b/login/login.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/commons.css">
-    <link rel="stylesheet" href="/css/cgv.css">
+    <link rel="stylesheet" href="css/commons.css">
+    <link rel="stylesheet" href="css/cgv.css">
     <script src="https://kit.fontawesome.com/eab1e9b5c5.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- header -->
-    <iframe src="/header.html" frameborder="0" width="100%" height="150px"></iframe>
+    <iframe src="https://dodosdev.github.io/cgv/header.html" frameborder="0" width="100%" height="150px"></iframe>
 
     <!-- content -->
     <div class="content">
@@ -59,7 +59,7 @@
         </div> 
 
     <!-- footer -->
-    <iframe src="/footer.html" frameborder="0" width="100%" height="500px"></iframe>
+    <iframe src="https://dodosdev.github.io/cgv/footer.html" frameborder="0" width="100%" height="500px"></iframe>
 
 </body>
 </html>
