--- a/header.html
+++ b/header.html
@@ -23,7 +23,7 @@
 
             <!-- 카드 이미지 -->
             <div class="header-top-card">
-                <img src="/images/header_card.png" alt="Card_img">
+                <img src="images/header_card.png" alt="Card_img">
             </div>
 
             <!-- 소메뉴 -->
