--- a/join/join.html
+++ b/join/join.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- header -->
-    <iframe src="/header.html" frameborder="0" width="100%" height="150px"></iframe>
+    <iframe src="https://dodosdev.github.io/cgv/header.html" frameborder="0" width="100%" height="150px"></iframe>
 
     <!-- 
     type :입력태그의 유형을 설정하는 속성
@@ -82,7 +82,7 @@
     </div>
 
     <!-- footer -->
-    <iframe src="/footer.html" frameborder="0" width="100%" height="500px"></iframe>
+    <iframe src="https://dodosdev.github.io/cgv/footer.html" frameborder="0" width="100%" height="500px"></iframe>
 
 </body>
 </html>
