--- a/index.html
+++ b/index.html
@@ -43,35 +43,35 @@
                         <!-- 무비 차트 리스트 -->
                         <li>
                             <div>
-                                <img src="/images/movie-chart1.jpg" alt="Movie-chart1" width="200px">
+                                <img src="images/movie-chart1.jpg" alt="Movie-chart1" width="200px">
                             </div>
                             <div><h3>베놈 :라스트댄스</h3></div>
                             <div><h5>예매율 97%</h5></div>
                         </li>
                         <li>
                             <div>
-                                <img src="/images/movie-chart2.jpg" alt="Movie-chart1" width="200px">
+                                <img src="images/movie-chart2.jpg" alt="Movie-chart1" width="200px">
                             </div>
                             <div><h3>글래디에이터</h3></div>
                             <div><h5>예매율 80%</h5></div>
                         </li>
                         <li>
                             <div>
-                                <img src="/images/movie-chart3.jpg" alt="Movie-chart3" width="200px">
+                                <img src="images/movie-chart3.jpg" alt="Movie-chart3" width="200px">
                             </div>
                             <div><h3>너의 색</h3></div>
                             <div><h5>예매율 90%</h5></div>
                         </li>
                         <li>
                             <div>
-                                <img src="/images/movie-chart4.jpg" alt="Movie-chart" width="200px">
+                                <img src="images/movie-chart4.jpg" alt="Movie-chart" width="200px">
                             </div>
                             <div><h3>보통의가족</h3></div>
                             <div><h5>예매율 70%</h5></div>
                         </li>
                         <li>
                             <div>
-                                <img src="/images/movie-chart5.jpg" alt="Movie-chart1" width="200px">
+                                <img src="images/movie-chart5.jpg" alt="Movie-chart1" width="200px">
                             </div>
                             <div><h3>대도시의 사랑법</h3></div>
                             <div><h5>예매율 68%</h5></div>
