--- a/admin/admin_main.html
+++ b/admin/admin_main.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/cgv/css/commons.css">
-    <link rel="stylesheet" href="/cgv/css/cgv.css">
+    <link rel="stylesheet" href="css/commons.css">
+    <link rel="stylesheet" href="css/cgv.css">
     <title>관리자 로그인</title>
 </head>
 <body>
     <!-- header -->
-    <iframe src="/cgv/header.html" frameborder="0" width="100%" height="150px"></iframe>
+    <iframe src="https://dodosdev.github.io/cgv/header.html" frameborder="0" width="100%" height="150px"></iframe>
 
     <!-- content -->
     <div class="content">
@@ -52,7 +52,7 @@
         </div> 
 
     <!-- footer -->
-    <iframe src="/cgv/footer.html" frameborder="0" width="100%" height="500px"></iframe>
+    <iframe src="https://dodosdev.github.io/cgv/footer.html" frameborder="0" width="100%" height="500px"></iframe>
 
 </body>
 </html>
