--- a/header.html
+++ b/header.html
@@ -17,7 +17,7 @@
         <div class="header-top">
             <!-- 로고 -->
             <div class="header-top-logo">
-                <a href="index.html" target="_parent"><img src="images/favicon.ico" alt="logo"></a>
+                <a href="index.html" target="_parent"><img src="https://dodosdev.github.io/cgv/images/favicon.ico" alt="logo"></a>
                 <span>DEEP DIVE SPACE</span>
             </div>
 
@@ -29,11 +29,11 @@
             <!-- 소메뉴 -->
             <nav>
                 <ul><!--/ (현재위치부터)어디서든 열리는 경로-->
-                    <li><a href="https://dodosdev.github.io/cgv/login/login.html" target="_parent" class="header-menu-icon">
+                    <li><a href="login/login.html" target="_parent" class="header-menu-icon">
                         <img src="https://img.cgv.co.kr/R2014/images/common/ico/loginPassword.png" alt=""><span>&nbsp;로그인</span></a></li> 
-                    <li><a href="https://dodosdev.github.io/cgv/join/join.html" target="_parent" class="header-menu-icon"><img src="https://img.cgv.co.kr/R2014/images/common/ico/loginJoin.png" alt=""><span>회원가입</span></a></li>
-                    <li><a href="https://dodosdev.github.io/cgv/mycgv/mycgv.html" target="_parent" class="header-menu-icon"><img src="https://img.cgv.co.kr/R2014/images/common/ico/loginMember.png" alt=""><span>My CGV</span></a></li>
-                    <li><a href="https://dodosdev.github.io/cgv/support/support.html" target="_parent" class="header-menu-icon"><img src="https://img.cgv.co.kr/R2014/images/common/ico/loginCustomer.png" alt=""><span>고객센터</span></a></li>
+                    <li><a href="join/join.html" target="_parent" class="header-menu-icon"><img src="https://img.cgv.co.kr/R2014/images/common/ico/loginJoin.png" alt=""><span>회원가입</span></a></li>
+                    <li><a href="mycgv/mycgv.html" target="_parent" class="header-menu-icon"><img src="https://img.cgv.co.kr/R2014/images/common/ico/loginMember.png" alt=""><span>My CGV</span></a></li>
+                    <li><a href="support/support.html" target="_parent" class="header-menu-icon"><img src="https://img.cgv.co.kr/R2014/images/common/ico/loginCustomer.png" alt=""><span>고객센터</span></a></li>
                 </ul>
             </nav>
         </div><!--소메뉴 end-->
