--- a/header.html
+++ b/header.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTFOLIO</title>
-    <link rel="stylesheet" href="css/commons.css">
-    <link rel="stylesheet" href="css/cgv.css">
+    <link rel="stylesheet" href="https://dodosdev.github.io/cgv/css/commons.css">
+    <link rel="stylesheet" href="https://dodosdev.github.io/cgv/css/cgv.css">
     <script src="https://kit.fontawesome.com/eab1e9b5c5.js" crossorigin="anonymous"></script>
 
 </head>
@@ -17,7 +17,7 @@
         <div class="header-top">
             <!-- 로고 -->
             <div class="header-top-logo">
-                <a href="index.html" target="_parent"><img src="https://dodosdev.github.io/cgv/images/favicon.ico" alt="logo"></a>
+                <a href="https://dodosdev.github.io/cgv/index.html" target="_parent"><img src="https://dodosdev.github.io/cgv/images/favicon.ico" alt="logo"></a>
                 <span>DEEP DIVE SPACE</span>
             </div>
 
