--- a/admin/admin_main.html
+++ b/admin/admin_main.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/commons.css">
-    <link rel="stylesheet" href="css/cgv.css">
+    <link rel="stylesheet" href="https://dodosdev.github.io/cgv/css/commons.css">
+    <link rel="stylesheet" href="https://dodosdev.github.io/cgv/css/cgv.css">
     <title>관리자 로그인</title>
 </head>
 <body>
