--- a/footer.html
+++ b/footer.html
@@ -37,7 +37,7 @@
             <p>대표이사 : 홍길동, 사업자등록번호 : 123-1245678, 통신판매업신고번호 : 201</p>
             <p>호스팅사업자 CJ올리브네트웍스 대표이메일 cjcgvmaster@cj.net</p>
             <p class="p2">
-                <a href="admin/admin_main.html" target="_parent">©</a>CJ CGV. All Rights Reserved</p>
+                <a href="https://dodosdev.github.io/cgv/admin/admin_main.html" target="_parent">©</a>CJ CGV. All Rights Reserved</p>
         </div>
     </footer>
 </body>
