--- a/header.html
+++ b/header.html
@@ -17,7 +17,7 @@
         <div class="header-top">
             <!-- 로고 -->
             <div class="header-top-logo">
-                <a href="https://dodosdev.github.io/cgv/index.html" target="_parent"><img src="https://dodosdev.github.io/cgv/images/favicon.ico" alt="logo"></a>
+                <a href="https://dodosdev.github.io/cgv/index.html" target="_parent"><img src="https://dodosdev.github.io/cgv/images/logoRed.png" alt="logo"></a>
                 <span>DEEP DIVE SPACE</span>
             </div>
 
