--- a/header.html
+++ b/header.html
@@ -33,7 +33,7 @@
                         <img src="https://img.cgv.co.kr/R2014/images/common/ico/loginPassword.png" alt=""><span>&nbsp;로그인</span></a></li> 
                     <li><a href="join/join.html" target="_parent" class="header-menu-icon"><img src="https://img.cgv.co.kr/R2014/images/common/ico/loginJoin.png" alt=""><span>회원가입</span></a></li>
                     <li><a href="mycgv/mycgv.html" target="_parent" class="header-menu-icon"><img src="https://img.cgv.co.kr/R2014/images/common/ico/loginMember.png" alt=""><span>My CGV</span></a></li>
-                    <li><a href="support/support.html" target="_parent" class="header-menu-icon"><img src="https://img.cgv.co.kr/R2014/images/common/ico/loginCustomer.png" alt=""><span>고객센터</span></a></li>
+                    <li><a href="support/support.html" target="_parent" class="header-menu-icon"><img src="https://img.cgv.co.kr/R2014/images/common/ico/loginCustomer.png" alt=""><span>My CGV</span></a></li>
                 </ul>
             </nav>
         </div><!--소메뉴 end-->
